--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  install-dependencies:
-    working_directory: ~/repo
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/node:16.13.2
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: Update or install NPM
-          command: 'sudo npm install -g npm'
-      - restore_cache:
-          key: app-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: npm install
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-  vercel-deploy:
-    build:
-    working_directory: ~/repo
-    docker:
-      - image: cimg/node:16.13.2
-    steps:
-      - checkout
-      - run:
-          name: Install CLI Vercel
-          command: 'sudo npm install -g vercel'
-      - attach_workspace:
-          at: .
-      - run:
-          name: Vercel Prod Deploy
-          command: vercel --prod --build-env --name $VERCEL_PROJECT_NAME --token=$VERCEL_TOKEN --yes
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  deploy-reactapp:
+  say-hello-workflow:
     jobs:
-      - install-dependencies:
-          filters:
-            branches:
-              only:
-                - main
-      - vercel-deploy:
-          requires:
-            - install-dependencies
-          filters:
-            branches:
-              only:
-                - main
+      - say-hello
