chore: modify circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           at: .
       - run:
           name: Vercel Prod Deploy
-          command: vercel --prod --build-env --name $VERCEL_PROJECT_NAME --token=$VERCEL_TOKEN --yes
+          command: vercel --prod --name $VERCEL_PROJECT_NAME --token=$VERCEL_TOKEN --yes
 workflows:
   version: 2
   deploy-reactapp:
